--- a/Resume.html
+++ b/Resume.html
@@ -9,10 +9,10 @@
     <table>
         
             <img align="left" width="85" height="100" src="snehal.jpg">
-            <h3>Snehal Ashok Sherikar,</h3>      
+            <h3>Snehal S,</h3>      
             <tr colspan="2">
               <p> Backend Developer Intern,</p>
-              <p>Jaysingpur,Maharashtra</p>
+              <p>Kolhapur,Maharashtra</p>
             <strong><p>I love ❤️ to work in the software field.</p></strong>  
             </tr> 
             <hr>
