--- a/Resume.html
+++ b/Resume.html
@@ -8,10 +8,11 @@
 <body>
     <table>
         
-            <img align="left" width="85" height="100" src="snehal.jpg">
+            <img align="Right" width="125" height="150" src="snehal.jpg">
             <h3>Snehal S,</h3>      
             <tr colspan="2">
               <p> Backend Developer Intern,</p>
+                <a href="sherikarsnehal@gmail.com">sherikarsnehal@gmail.com</a>
               <p>Kolhapur,Maharashtra</p>
             <strong><p>I love ❤️ to work in the software field.</p></strong>  
             </tr> 
